--- a/css/texteffect.css
+++ b/css/texteffect.css
@@ -165,7 +165,7 @@ main {
 .content__text {
 	padding: 0 5vw 25vh;
 	line-height: 2;
-	color: white;
+	color: #c4c3c2;
 	text-align:justify;
 	  font-size: 15px;
 
