--- a/css/texteffect.css
+++ b/css/texteffect.css
@@ -166,9 +166,8 @@ main {
 	padding: 0 5vw 25vh;
 	line-height: 2;
 	color: #c4c3c2;
-	text-align:justify;
+	text-align:center;
 	  font-size: 18px;
-  font-weight: bold;
 
 
 }
